cmake_minimum_required(VERSION 3.0)

#add_subdirectory(Src/LibA)

#add_subdirectory(Src/TestA)
#add_subdirectory(Src/TestC)

#add_subdirectory(Src/list)

#add_subdirectory(Src/Stack)

#add_subdirectory(Src/Queue)

#add_subdirectory(Src/Tree)

#add_subdirectory(Src/Sort)

#add_subdirectory(Src/LeetCode23)

#add_subdirectory(Src/LeetCodeList)

add_subdirectory(Src/LeetCodeGreedy)

